<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/mail_car_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/mailcar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="204dp"
        android:text="@string/mail_schedule_main_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameTextInput"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressPlaceholder"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="356dp"
        android:text="@string/address_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addressTextInput"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="348dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/address_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityPlaceholder"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="416dp"
        android:text="@string/city_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cityTextInput"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/city_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/provincePlaceholder"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="464dp"
        android:text="@string/province_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/provinceTextInput"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="452dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/province_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postalCodePlaceholder"
        android:layout_width="119dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="508dp"
        android:text="@string/postal_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/postalCodeTextInput"
        android:layout_width="235dp"
        android:layout_height="51dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="508dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/postal_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coutryPlaceholder"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="572dp"
        android:text="@string/country_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/countryTextInput"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="560dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/country_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namePlaceholder"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="300dp"
        android:text="@string/name_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="616dp"
        android:onClick="scheduleDelivery"
        android:text="@string/schedule_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>